services/nexus/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  namespace: drn-project
  labels:
    app: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      name: nexus
      labels:
        app: nexus
      annotations:
        linkerd.io/inject: enabled
    spec:
      automountServiceAccountToken: false
      restartPolicy: Always
      serviceAccountName: nexus
      containers:
        - name: nexus
          image: duranserkan/drn-project-nexus:0.2.2-preview001
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /appconfig/json-settings
              name: config
          ports:
          - containerPort: 5988
            name: http
            protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 100Mi
              ephemeral-storage: 1Gi
            requests:
              cpu: 100m
              memory: 100Mi
              ephemeral-storage: 1Gi
      volumes:
        - name: config
          configMap:
            name: nexus-config
