services/nexus/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus
  labels:
    app: nexus
spec:
  selector:
    app: nexus
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
